mtls-demo/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
  name: guacamole-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
