mtls-demo/guacamole-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
  name: guacamole
spec:
  host: guacamole
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - labels:
      version: v1
    name: v1
