mtls-demo/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
  name: guacamole
spec:
  gateways:
  - guacamole-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /guacamole
    route:
    - destination:
        host: guacamole
        port:
          number: 8080
